--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "advent-of-code-2022",
   "type": "module",
-  "scripts": {
-    "start": "nodemon src --ignore src/2022"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Zyrica/advent-of-code-2022.git"
   },
   "dependencies": {
+    "big-number": "^2.0.0",
     "chalk": "^5.1.2",
     "nodemon": "^2.0.20"
   },
